Further dropdown fix attempts to prevent triggering scrollbars when hidden.

--- a/source/sass/_components.scss
+++ b/source/sass/_components.scss
@@ -10,10 +10,13 @@
 // scrollbars on smaller screens.
 
 .dropdown-pane {
-  width: auto;
+  height: 0;
+  overflow: hidden;
+  width: 0;
 
   // TODO: do we need spec declarations for tiny / large dropdowns?
   &.is-open {
+    height: auto;
     width: $dropdown-width;
   }
 }
